[package]
name = "oytr"
version = "0.0.0"
edition = "2021"
description = """
Oh ya, that's right...

Configure simple reminders on a schedule using cron expressions and get desktop notifications when they are triggered.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
cron = "0.12.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
notify-rust = "4.8.0"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
